# Batch-and-Stream-Processing

./: README.md  docker-compose.yaml  main.py  pyproject.toml
Batch-notes/: Spark_optimisations.ipynb  Untitled.ipynb  batch_spark.ipynb
stream-notes/: producer.ipynb  producer.py  tlf_arrivals.parquet
